--- a/package.json
+++ b/package.json
@@ -2,5 +2,11 @@
   "name": "nodejs-api-training",
   "version": "1.0.0",
   "private": true,
-  "repository": "git@github.com:smooth-code/nodejs-api-training.git"
+  "repository": "git@github.com:smooth-code/nodejs-api-training.git",
+  "scripts": {
+    "format": "prettier --write \"**/*.mjs\""
+  },
+  "devDependencies": {
+    "prettier": "^1.12.0"
+  }
 }
