--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "repository": "git@github.com:smooth-code/nodejs-api-training.git",
   "scripts": {
     "format": "prettier --write \"**/*.m?js\"",
-    "build": "babel src -d lib"
+    "build": "babel src -d lib",
+    "lint": "eslint ."
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.2.2",
     "babel-preset-env": "^1.6.1",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.11.0",
     "prettier": "^1.12.0"
   }
 }
