--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "format": "prettier --write \"**/*.m?js\"",
     "build": "babel src -d lib",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "start": "nodemon src/server.js"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -16,6 +17,7 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.11.0",
+    "nodemon": "^1.17.3",
     "prettier": "^1.12.0"
   }
 }
