--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "eslint-plugin-import": "^2.11.0",
     "nodemon": "^1.17.3",
     "prettier": "^1.12.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.3"
   }
 }
