--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "knex": "^0.14.6",
+    "objection": "^1.1.6",
     "sqlite3": "^4.0.0"
   }
 }
