--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "express-oauth-server": "^2.0.0",
     "knex": "^0.14.6",
     "objection": "^1.1.6",
     "sqlite3": "^4.0.0"
