--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.2",
+    "busboy": "^0.2.14",
     "express": "^4.16.3",
     "express-oauth-server": "^2.0.0",
     "knex": "^0.14.6",
