--- a/package.json
+++ b/package.json
@@ -21,12 +21,17 @@
     "prettier": "^1.12.0"
   },
   "dependencies": {
+    "add": "^2.0.6",
+    "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "busboy": "^0.2.14",
+    "chalk": "^2.4.0",
+    "commander": "^2.15.1",
     "express": "^4.16.3",
     "express-oauth-server": "^2.0.0",
     "knex": "^0.14.6",
     "objection": "^1.1.6",
+    "ora": "^2.0.0",
     "sqlite3": "^4.0.0"
   }
 }
