--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "format": "prettier --write \"**/*.m?js\"",
     "build": "babel src -d lib",
     "lint": "eslint .",
-    "start": "nodemon src/server.js"
+    "start": "nodemon src/server.js",
+    "test": "jest"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -17,8 +18,10 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.11.0",
+    "jest": "^22.4.3",
     "nodemon": "^1.17.3",
-    "prettier": "^1.12.0"
+    "prettier": "^1.12.0",
+    "supertest": "^3.0.0"
   },
   "dependencies": {
     "add": "^2.0.6",
